# torchkick

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  train_tracker.py
examples/: yolo_player_tracker.py
models/line_detection/: model.py  train.py
models/tracking/fcnn/: train_fcnn.py
models/tracking/yolo/: config.yaml  train_yolo.py
soccernet/: calibration_data.py  data.py  tracking_data.py  utils.py
src/torchkick/: __init__.py  _version.py  cli.py  inference.py
src/torchkick/annotation/: __init__.py  client.py  dataset.py  exporters.py  ingestion.py  labels.py  models.py  prelabel.py
src/torchkick/bbox_tracking/: __init__.py  ball.py  identity.py  models.py  pitch_viz.py  trajectory.py
src/torchkick/models/: __init__.py  pitch.py  player.py
src/torchkick/sam3/_mlx/: convert.py  model.py  plot.py  test.py
src/torchkick/sam3/_mlx/backbone/: box_ops.py  decoder.py  grid_sample.py  image.py  maskformer_segmentation.py  necks.py  processor.py  roi_align.py  tokenizer_ve.py  vitdet.py  vl_combiner.py
src/torchkick/sam3/_mlx/backbone/encoders/: __init__.py  geometry.py  position.py  text_ve.py  transformer.py
src/torchkick/sam3/_mlx/backbone/utils/: __init__.py  data.py  model.py
src/torchkick/soccernet/: __init__.py  calibration_data.py  download.py  tracking_data.py
src/torchkick/tracking/: __init__.py  ball.py  color_features.py  homography.py  identity.py  iou_tracker.py  pitch_viz.py  trajectory.py
src/torchkick/training/: __init__.py  train_fcnn.py  train_lines.py  train_rtdetr.py  train_yolo.py
src/torchkick/utils/: __init__.py  timing.py  video.py  visualization.py
